Details
-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
None
-
Qt Creator 15.0.0
-
None
-
-
ffae39f42 (master)
Description
qtc sometimes crashes for me when in a debugger. the core dumps show this stack trace (no debug symbols, unfortunately). the other threads seem to be idle
* thread #1, name = 'qtcreator', stop reason = signal SIGSEGV: address not mapped to object * frame #0: 0x0000701ef15e0f03 libQt6Core.so.6`QString::startsWith(QString const&, Qt::CaseSensitivity) const + 3 frame #1: 0x0000701ee4db6702 libDebugger.so`Debugger::Internal::DebuggerToolTipManager::pendingTooltips() const + 226 frame #2: 0x0000701ee4ed8d96 libDebugger.so`Debugger::Internal::WatchHandler::appendWatchersAndTooltipRequests(Debugger::Internal::DebuggerCommand*) const + 54 frame #3: 0x0000701ee4e1f592 libDebugger.so`Debugger::Internal::LldbEngine::doUpdateLocals(Debugger::Internal::UpdateParameters const&) + 210 frame #4: 0x0000701ee4d39842 libDebugger.so`Debugger::Internal::DebuggerEngine::updateItem(QString const&) + 962 frame #5: 0x0000701ee4ecbaf4 libDebugger.so`Debugger::Internal::WatchModel::expand(Debugger::Internal::WatchItem*, bool) + 468 frame #6: 0x0000701ef2a247cb libQt6Widgets.so.6`QTreeViewPrivate::layout(int, bool, bool) + 283 frame #7: 0x0000701ef2a1defd libQt6Widgets.so.6`QTreeViewPrivate::expand(int, bool) + 557 frame #8: 0x0000701ef2a20d51 libQt6Widgets.so.6`QTreeViewPrivate::expandOrCollapseItemAtPos(QPoint const&) + 209 frame #9: 0x0000701ef2a231b9 libQt6Widgets.so.6`QTreeView::mousePressEvent(QMouseEvent*) + 137 frame #10: 0x0000701ef2d677ff libUtils.so.14`Utils::BaseTreeView::mousePressEvent(QMouseEvent*) + 175 frame #11: 0x0000701ef2754444 libQt6Widgets.so.6`QWidget::event(QEvent*) + 2276 frame #12: 0x0000701ef27e3505 libQt6Widgets.so.6`QFrame::event(QEvent*) + 37 frame #13: 0x0000701ef29a7536 libQt6Widgets.so.6`QAbstractItemView::viewportEvent(QEvent*) + 1222 frame #14: 0x0000701ef2a1fe10 libQt6Widgets.so.6`QTreeView::viewportEvent(QEvent*) + 320 frame #15: 0x0000701ef1513114 libQt6Core.so.6`QCoreApplicationPrivate::sendThroughObjectEventFilters(QObject*, QEvent*) + 260 frame #16: 0x0000701ef26f7c70 libQt6Widgets.so.6`QApplicationPrivate::notify_helper(QObject*, QEvent*) + 224 frame #17: 0x0000701ef26f9fb1 libQt6Widgets.so.6`QApplication::notify(QObject*, QEvent*) + 5921 frame #18: 0x0000701ef1512e35 libQt6Core.so.6`QCoreApplication::notifyInternal2(QObject*, QEvent*) + 165 frame #19: 0x0000701ef26f81f8 libQt6Widgets.so.6`QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) + 824 frame #20: 0x0000701ef276ace9 libQt6Widgets.so.6`QWidgetWindow::handleMouseEvent(QMouseEvent*) + 1689 frame #21: 0x0000701ef2769e7c libQt6Widgets.so.6`QWidgetWindow::event(QEvent*) + 92 frame #22: 0x0000701ef26f7c84 libQt6Widgets.so.6`QApplicationPrivate::notify_helper(QObject*, QEvent*) + 244 frame #23: 0x0000701ef26f8a5b libQt6Widgets.so.6`QApplication::notify(QObject*, QEvent*) + 459 frame #24: 0x0000701ef1512e35 libQt6Core.so.6`QCoreApplication::notifyInternal2(QObject*, QEvent*) + 165 frame #25: 0x0000701ef1d08413 libQt6Gui.so.6`QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) + 2035 frame #26: 0x0000701ef1d627ba libQt6Gui.so.6`QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 378 frame #27: 0x0000701eed94f97a libQt6XcbQpa.so.6`xcbSourceDispatch(_GSource*, int (*)(void*), void*) + 26 frame #28: 0x0000701ef0d145b5 libglib-2.0.so.0`___lldb_unnamed_symbol2563 + 501 frame #29: 0x0000701ef0d73717 libglib-2.0.so.0`___lldb_unnamed_symbol2869 + 567 frame #30: 0x0000701ef0d13a53 libglib-2.0.so.0`g_main_context_iteration + 51 frame #31: 0x0000701ef176eb50 libQt6Core.so.6`QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) + 96 frame #32: 0x0000701ef151b8d6 libQt6Core.so.6`QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) + 518 frame #33: 0x0000701ef15134f4 libQt6Core.so.6`QCoreApplication::exec() + 116 frame #34: 0x00005c7654c43887 qtcreator`main + 20983 frame #35: 0x0000701ef0a2a1ca libc.so.6`__libc_start_call_main(main=(qtcreator`main), argc=1, argv=0x00007ffd92a9b358) at libc_start_call_main.h:58:16 frame #36: 0x0000701ef0a2a28b libc.so.6`__libc_start_main_impl(main=(qtcreator`main), argc=1, argv=0x00007ffd92a9b358, init=<unavailable>, fini=<unavailable>, rtld_fini=<unavailable>, stack_end=0x00007ffd92a9b348) at libc-start.c:360:3 frame #37: 0x00005c7654c3d0c5 qtcreator`_start + 37