Debugger: Purge dead tooltips before accessing them

Fixes: QTCREATORBUG-31323
Change-Id: I58a4235f40fa7976dd0f18edeb4c3b0954283af9
Reviewed-by: Christian Stenger <christian.stenger@qt.io>